Fix layout issues with hero block and article block sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -480,8 +480,12 @@ input:focus {
 }
 
 .article__image img {
-  width: 100%;
+  width: 100vw;
   height: 100%;
+}
+
+.grid--1x3.article__image-container {
+  gap: 0;
 }
 
 .article__side-image img {
@@ -507,6 +511,16 @@ input:focus {
 .article__header p {
   font-size: 1.6rem;
   color: var(--color-secondary);
+}
+
+@media screen and (min-width: 500px) {
+  .article__image img {
+    width: 100%;
+  }
+
+  .grid--1x3.article__image-container {
+    gap: 0.7rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -880,6 +894,10 @@ nav button:hover {
   margin-top: 3rem;
 }
 
+.hero__container {
+  padding: 0 1.5rem;
+}
+
 .hero__list {
   display: flex;
   color: var(--color-secondary);
@@ -887,6 +905,7 @@ nav button:hover {
 }
 
 .hero__list a:nth-last-child(2),
+.hero__list a:nth-last-child(4),
 .hero__list a:nth-last-child(3) {
   display: none;
 }
@@ -917,6 +936,12 @@ nav button:hover {
   opacity: 1;
 }
 
+@media screen and (min-width: 450px) {
+  .hero__list a:nth-last-child(4) {
+    display: block;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero__list a:nth-last-child(2),
   .hero__list a:nth-last-child(3) {
@@ -931,9 +956,15 @@ nav button:hover {
 /* Listing Block */
 
 .container {
-  padding: 0 2.5rem;
+  padding: 0 1rem;
   max-width: 750px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0 2.5rem;
+  }
 }
 
 @media screen and (min-width: 990px) {
